Stop chrome from initializing ozone inside mash.

The chrome UI process normally initializes ozone. When running inside
mash the mus prcoess owns ozone instead. Add a check for a flag that
signals chrome is running inside mash and don't initialize ozone in that
case.

BUG=592756

Review URL: https://codereview.chromium.org/1825733003

Cr-Commit-Position: refs/heads/master@{#382894}

Former-commit-id: 4ed171b7b7cf88fea577208abbe901a125f675dc